--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,46 @@
+aiohttp==3.9.1
+aiosignal==1.3.1
+async-timeout==4.0.3
+attrs==23.1.0
 bcrypt==4.0.1
 beautifulsoup4==4.12.2
 certifi==2023.11.17
 cffi==1.16.0
 charset-normalizer==3.3.2
+coloredlogs==15.0.1
 cos-python-sdk-v5==1.9.26
 crcmod==1.7
 cryptography==41.0.4
+dateparser==1.2.0
+frozenlist==1.4.0
 fusepy==3.0.1
 google==3.0.0
 grpcio==1.59.3
 grpcio-reflection==1.59.3
 grpcio-tools==1.59.3
+humanfriendly==10.0
 idna==3.4
+multidict==6.0.4
 oxfs==0.5.5
 paramiko==3.3.1
 protobuf==4.25.1
 pycparser==2.21
 pycryptodome==3.19.0
 PyNaCl==1.5.0
+python-binance==1.0.19
+python-dateutil==2.8.2
+pytz==2023.3.post1
 reflection==0.1.1
+regex==2023.10.3
 requests==2.31.0
+schedule==1.2.1
 six==1.16.0
 soupsieve==2.5
+sydney-py==0.19.0
+tzlocal==5.2
+ujson==5.9.0
 urllib3==2.1.0
+websockets==11.0.3
 xmltodict==0.13.0
 xxhash==3.4.1
-schedule~=1.2.1
-python-binance~=1.0.19
-coloredlogs~=15.0.1
+yarl==1.9.4
