--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-aiohttp==3.9.1
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.5
 aiosignal==1.3.1
 async-timeout==4.0.3
 attrs==23.1.0
@@ -11,6 +12,7 @@ coloredlogs==15.0.1
 cos-python-sdk-v5==1.9.26
 crcmod==1.7
 cryptography==41.0.4
+dataclasses-json==0.6.7
 dateparser==1.2.0
 frozenlist==1.4.0
 fusepy==3.0.1
@@ -20,9 +22,13 @@ grpcio-reflection==1.59.3
 grpcio-tools==1.59.3
 humanfriendly==10.0
 idna==3.4
+marshmallow==3.23.1
 multidict==6.0.4
+mypy-extensions==1.0.0
 oxfs==0.5.5
+packaging==24.2
 paramiko==3.3.1
+propcache==0.2.0
 protobuf==4.25.1
 pycparser==2.21
 pycryptodome==3.19.0
@@ -37,6 +43,8 @@ schedule==1.2.1
 six==1.16.0
 soupsieve==2.5
 sydney-py==0.19.0
+typing-inspect==0.9.0
+typing_extensions==4.12.2
 tzlocal==5.2
 ujson==5.9.0
 urllib3==2.1.0
